cmake_minimum_required(VERSION 3.1)
project(ApproxWP)
find_package(LLVM REQUIRED CONFIG)
find_package(Boost 1.36.0)
add_definitions(${LLVM_DEFINITIONS})
include_directories(${LLVM_INCLUDE_DIRS})
link_directories(${LLVM_LIBRARY_DIRS})
include_directories(src/WP)
include_directories(src/Record)
include_directories(src/IRPass)
include_directories(src/SymbolicTable)
include_directories(src/Expression)
include_directories(src/BottomUpPass)
add_subdirectory(src/IRPass)  # Use your pass name here.

add_subdirectory(src/BottomUpPass)
add_subdirectory(src/Record)
add_subdirectory(src/SymbolicTable)
add_subdirectory(src/Expression)
add_subdirectory(src/SymbolicAnalysisPass)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "build/")